# emmyleaf.github.io

./: .eslintrc.js  .gitignore  404.html  CNAME  LICENSE.md  README.md  build.mjs  build.sh  bundle.css  bundle.js  common.css  common.mjs  dev.mjs  dev.sh  index.html  package-lock.json  package.json  theme.js
.github/: dependabot.yml
.github/workflows/: build-and-deploy-nextjs.yml  build-and-deploy.yml  update-npm-deps.sh  update-npm-deps.yml
_next/static/2AIsytGsSJy08msfjCANe/: _buildManifest.js
_next/static/598fozy8q4aq4QbTmRXDv/: _buildManifest.js
_next/static/5WTkTJ7LLYi35q7t3P0jg/: _buildManifest.js
_next/static/TjxbiJ1awRj3aI0mYdIs4/: _buildManifest.js
_next/static/V11vJlwwl8Z_bc3K1VUre/: _buildManifest.js
_next/static/cAf23NYnwYeXlAEb02ND2/: _buildManifest.js
_next/static/chunks/pages/: _app-98f61d43b26806056fd6.js  index-18daf055ca0d198296c8.js  index-2987c40b06114dbf8ad7.js  index-6681132d1f94a50b66fc.js
_next/static/gnrpR8RwL5TLKNVbwTSI0/: _buildManifest.js
_next/static/tQIdKz3ykBRoUmIWgj-cu/: _buildManifest.js
blog/: index.html  new-site.html  site-build.html
components/: nav.tsx
generator/: .rustfmt.toml  Cargo.toml
generator/src/: main.rs  types.rs
leafcodes_ssg/: Cargo.toml
leafcodes_ssg/src/: main.rs
pages/: _app.tsx  index.tsx
projects/: index.html  lutra.html  perfect-draw.html  psifrost.html  tmfbma-demo.html
site_src/content/: index.md
site_src/content/blog/: index.md  new-site.md  site-build.md
site_src/content/projects/: index.md  lutra.md  perfect-draw.md  psifrost.md  tmfbma-demo.md
site_src/include/: common.css  theme.js
site_src/include/images/: perfect-draw.avif  psifrost-1.avif
site_src/script/: index.css  index.js
site_src/template/: _inc_footer.html  _inc_head.html  _inc_header.html  blog_index.hbs  blog_index.html  blog_post.hbs  blog_post.html  index.hbs  page.hbs  project.html  project_index.html
styles/: index.css
