[package]
name = "leafcodes_ssg"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
anyhow = "1.0.70"
const_format = "0.2.30"
minify-html = "0.10.8"
pulldown-cmark = { version = "0.9.2", default-features = false, features = [
    "simd",
] }
ramhorns = "0.14.0"
walkdir = "2.3.2"
