[package]
name = "leafcodes_ssg"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
anyhow = "1.0.79"
const_format = "0.2.32"
minify-html = "0.15.0"
pulldown-cmark = { version = "0.9.6", default-features = false, features = [
    "simd",
] }
ramhorns = "0.14.0"
walkdir = "2.4.0"
