[package]
name = "leafcodes_ssg"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
anyhow = "1"
const_format = "0.2"
minify-html = "0.15"
pulldown-cmark = { version = "0.10", default-features = false, features = [
    "html",
    "simd",
] }
ramhorns = { version = "0.14", default-features = false, features = [
    "export_derive",
] }
walkdir = "2"
