[package]
name = "leafcodes_ssg"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
anyhow = "1.0.58"
axum = "0.5.12"
const_format = "0.2.26"
handlebars = "4.3.1"
hotwatch = "0.4.6"
pulldown-cmark = { version = "0.9.1", default-features = false, features = [
    "simd",
] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["fs"] }
walkdir = "2.3.2"
