[package]
name = "leafcodes_ssg"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
axum = { version = "0.5.13", optional = true }
anyhow = "1.0.58"
const_format = "0.2.26"
handlebars = "4.3.1"
hotwatch = { version = "0.4.6", optional = true }
minify-html = "0.9.2"
pulldown-cmark = { version = "0.9.1", default-features = false, features = [
    "simd",
] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"], optional = true }
tower-http = { version = "0.3.4", features = ["fs"], optional = true }
walkdir = "2.3.2"

[features]
dev = ["dep:axum", "dep:hotwatch", "dep:tokio", "dep:tower-http"]
